--- a/BanHangOnline/BanHangOnline/Areas/Manager/Views/Shared/_MenuLeftAdmin.cshtml
+++ b/BanHangOnline/BanHangOnline/Areas/Manager/Views/Shared/_MenuLeftAdmin.cshtml
@@ -13,26 +13,32 @@
 							<i class="icon-home2"></i>
 							<span class="nav-link-text">Dashboards</span>
 						</a>
+						<a class="nav-link" id="product-tab" data-bs-toggle="tab" href="#tab-product-parent" role="tab" aria-controls="tab-product" aria-selected="false">
+							<i class="icon-layers2"></i>
+							<span class="nav-link-text">Product</span>
+						</a>
+
 						<a class="nav-link" id="product-tab" data-bs-toggle="tab" href="#tab-product" role="tab" aria-controls="tab-product" aria-selected="false">
 							<i class="icon-layers2"></i>
 							<span class="nav-link-text">Product</span>
 						</a>
-						<a class="nav-link" id="pages-tab" data-bs-toggle="tab" href="#tab-pages" role="tab" aria-controls="tab-pages" aria-selected="false">
+
+						@*<a class="nav-link" id="pages-tab" data-bs-toggle="tab" href="#tab-pages" role="tab" aria-controls="tab-pages" aria-selected="false">
 							<i class="icon-book-open"></i>
 							<span class="nav-link-text">Pages</span>
-						</a>
+						</a>*@
 						<a class="nav-link" id="forms-tab" data-bs-toggle="tab" href="#tab-forms" role="tab" aria-controls="tab-forms" aria-selected="false">
 							<i class="icon-edit1"></i>
 							<span class="nav-link-text">Forms</span>
 						</a>
-						<a class="nav-link" id="components-tab" data-bs-toggle="tab" href="#tab-components" role="tab" aria-controls="tab-components" aria-selected="false">
+						@*<a class="nav-link" id="components-tab" data-bs-toggle="tab" href="#tab-components" role="tab" aria-controls="tab-components" aria-selected="false">
 							<i class="icon-box"></i>
 							<span class="nav-link-text">Components</span>
-						</a>
-						<a class="nav-link" id="graphs-tab" data-bs-toggle="tab" href="#tab-graphs" role="tab" aria-controls="tab-graphs" aria-selected="false">
+						</a>*@
+						@*<a class="nav-link" id="graphs-tab" data-bs-toggle="tab" href="#tab-graphs" role="tab" aria-controls="tab-graphs" aria-selected="false">
 							<i class="icon-pie-chart1"></i>
 							<span class="nav-link-text">Graphs</span>
-						</a>
+						</a>*@
 						<a class="nav-link" id="authentication-tab" data-bs-toggle="tab" href="#tab-authentication" role="tab" aria-controls="tab-authentication" aria-selected="false">
 							<i class="icon-unlock"></i>
 							<span class="nav-link-text">Authentication</span>
@@ -61,100 +67,23 @@
 								<div class="sidebar-menu">
 									<ul>
 										<li>
-											<a href="index.html" class="current-page">Dashboard</a>
+											<a href="#" class="current-page">Dashboard</a>
 										</li>
 										<li>
-											<a href="analytics.html">Analytics</a>
-										</li>
-										<li>
-											<a href="sales.html">Sales</a>
-										</li>
-										<li>
-											<a href="crm.html">CRM</a>
-										</li>
-										<li>
-											<a href="reports.html">Reports</a>
-										</li>
-										<li>
-											<a href="saas.html">Saas</a>
-										</li>
-										<li>
-											<a href="consulting.html">Consulting</a>
-										</li>
-										<li>
-											<a href="profile.html">Profile</a>
-										</li>
-									</ul>
-									<ul>
-										<li class="list-heading">Layouts</li>
-										<li>
-											<a href="starter-page.html">Starter Page</a>
-										</li>
-										<li>
-											<a href="layout-tabs-tooltip.html">Tabs Hover Tooltip</a>
-										</li>
-										<li>
-											<a href="layout-tile-menu.html">Tile Menu</a>
-										</li>
-										<li>
-											<a href="layout-collapse-menu.html">Collapse Sidebar</a>
-										</li>
-										<li>
-											<a href="layout-compact-menu.html">Compact Sidebar</a>
-										</li>
-										<li>
-											<a href="layout-slim-menu.html">Slim Sidebar</a>
-										</li>
-										<li>
-											<a href="layout-hover-tabs.html">Hover Tabs</a>
-										</li>
-										<li>
-											<a href="layout-daterange.html">Date Range</a>
-										</li>
-										<li>
-											<a href="layout-full-screen.html">Full Screen</a>
-										</li>
-										<li>
-											<a href="layout-full-view.html">Full View</a>
-										</li>
-										<li>
-											<a href="layout-search.html">Global Search</a>
-										</li>
-										<li>
-											<a href="layout-megamenu.html">Megamenu</a>
-										</li>
-										<li>
-											<a href="layout-bradcrumb.html">Breadcrumbs</a>
-										</li>
-										<li>
-											<a href="layout-scroll-cards.html">Scroll Cards</a>
+											<a href="#" class="current-page">Profile</a>
 										</li>
 									</ul>
 								</div>
 							</div>
 							<!-- Sidebar menu ends -->
-
-							<!-- Sidebar actions starts -->
-							<div class="sidebar-actions">
-								<a href="orders.html" class="red">
-									<div class="bg-avatar">12</div>
-									<h5>New Orders</h5>
-								</a>
-								<a href="invoices-list.html" class="blue">
-									<div class="bg-avatar">24</div>
-									<h5>Bills Pending</h5>
-								</a>
-							</div>
-							<!-- Sidebar actions ends -->
-
 						</div>
 
 						<!-- Pages tab -->
-						<div class="tab-pane fade" id="tab-product" role="tabpanel" aria-labelledby="product-tab">
+						<div class="tab-pane fade" id="tab-product-parent" role="tabpanel" aria-labelledby="product-tab">
 							
 							<!-- Tab content header start -->
 							<div class="tab-pane-header">
-								Product
+								Danh mục cha
 							</div>
 							<!-- Tab content header end -->
 
@@ -162,41 +91,8 @@
 							<div class="sidebarMenuScroll">
 								<div class="sidebar-menu">
 									<ul>
-										<li>
-											<a href="products.html">Products Grid</a>
-										</li>
-										<li>
-											<a href="products-list.html">Products List</a>
-										</li>
-										<li>
-											<a href="add-product.html">Add Product</a>
-										</li>
-										<li>
-											<a href="orders.html">Orders</a>
-										</li>
-										<li>
-											<a href="customers-list.html">Customers</a>
-										</li>
-										<li>
-											<a href="products-reviews.html">Reviews</a>
-										</li>
-									</ul>
-									<ul>
-										<li class="list-heading">Calendars</li>
-										<li>
-											<a href="calendar-daygrid-view.html">Daygrid View</a>
-										</li>
-										<li>
-											<a href="calendar-list-view.html">List View</a>
-										</li>
-										<li>
-											<a href="calendar-external-dragging.html">Draggable</a>
-										</li>
-										<li>
-											<a href="calendar-google-view.html">Google View</a>
-										</li>
-										<li>
-											<a href="calendar-selectable.html">Selectable</a>
+										<li> 
+											<a asp-area="Manager" asp-controller="WebBannerGroup" asp-action="index">Danh mục hình ảnh banner (parent)</a>
 										</li>
 									</ul>
 								</div>
@@ -210,15 +106,17 @@
 								</div>
 							</div>
 							<!-- Sidebar actions ends -->
-							
 						</div>
 
-						<!-- Pages tab -->
-						<div class="tab-pane fade" id="tab-pages" role="tabpanel" aria-labelledby="pages-tab">
+
+
+
+
+						<div class="tab-pane fade" id="tab-product" role="tabpanel" aria-labelledby="product-tab">
 							
 							<!-- Tab content header start -->
 							<div class="tab-pane-header">
-								Pages
+								Product
 							</div>
 							<!-- Tab content header end -->
 
@@ -227,49 +125,7 @@
 								<div class="sidebar-menu">
 									<ul>
 										<li>
-											<a href="chat.html">Chat</a>
-										</li>
-										<li>
-											<a href="tasks.html">Tasks</a>
-										</li>
-										<li>
-											<a href="create-invoice.html">Create Invoice</a>
-										</li>
-										<li>
-											<a href="view-invoice.html">View Invoice</a>
-										</li>
-										<li>
-											<a href="documents.html">Documents</a>
-										</li>
-										<li>
-											<a href="faq.html">Faq's</a>
-										</li>
-										<li>
-											<a href="contacts.html">Contacts</a>
-										</li>
-										<li>
-											<a href="pricing.html">Pricing</a>
-                                        </li>
-                                        <li>
-											<a href="gallery-tiles.html">Gallery Tiles</a>
-                                        </li>
-                                        <li>
-											<a href="gallery.html">Gallery</a>
-										</li>
-										<li>
-											<a href="icons.html">Icons</a>
-										</li>
-										<li>
-											<a href="timeline.html">Timeline</a>
-										</li>
-										<li>
-											<a href="search-results.html">Search Results</a>
-										</li>
-										<li>
-											<a href="account-settings.html">Account Settings</a>
-                                        </li>
-                                        <li>
-											<a href="user-profile.html">User Profile</a>
+											<a href="#">sản phẩm</a>
 										</li>
 									</ul>
 								</div>
@@ -278,13 +134,13 @@
 
 							<!-- Sidebar actions starts -->
 							<div class="sidebar-actions">
-								<div class="support-tile green">
-									<i class="icon-pie-chart1"></i> 5GB Free Space
+								<div class="support-tile">
+									<i class="icon-headphones"></i> 24/7 Support
 								</div>
 							</div>
 							<!-- Sidebar actions ends -->
-
 						</div>
+
 
 						<!-- Forms tab -->
 						<div class="tab-pane fade" id="tab-forms" role="tabpanel" aria-labelledby="forms-tab">
@@ -334,27 +190,7 @@
 											<a href="forms-validation.html">Form Validation</a>
 										</li>
 									</ul>									
-									<ul>
-										<li class="list-heading">Plugins</li>
-										<li>
-											<a href="forms-dropzone.html">Dropzone</a>
-										</li>
-										<li>
-											<a href="forms-bs-select.html">Select 2 Dropdowns</a>
-										</li>
-										<li>
-											<a href="forms-date-time-picker.html">Date Time Picker</a>
-										</li>
-										<li>
-											<a href="forms-input-mask.html">Input Mask</a>
-										</li>
-										<li>
-											<a href="forms-input-range.html">Input Range</a>
-										</li>
-										<li>
-											<a href="forms-editor.html">WYSIWYG Editor</a>
-										</li>
-									</ul>
+									
 								</div>
 							</div>
 							<!-- Sidebar menu ends -->
@@ -369,128 +205,7 @@
 
 						</div>
 						
-						<!-- Components tab -->
-						<div class="tab-pane fade" id="tab-components" role="tabpanel" aria-labelledby="components-tab">
-							
-							<!-- Tab content header start -->
-							<div class="tab-pane-header">
-								Components
-							</div>
-							<!-- Tab content header end -->
-
-							<!-- Sidebar menu starts -->
-							<div class="sidebarMenuScroll">
-								<div class="sidebar-menu">
-									<ul>
-                                        <li>
-                                            <a href="accordions.html">Accordions</a>
-                                        </li>
-                                        <li>
-                                            <a href="alerts.html">Alerts</a>
-                                        </li>
-                                        <li>
-                                            <a href="buttons.html">Buttons</a>
-                                        </li>
-                                        <li>
-                                            <a href="badges.html">Badges</a>
-                                        </li>
-                                        <li>
-                                            <a href="cards.html">Cards</a>
-                                        </li>
-                                        <li>
-                                            <a href="carousel.html">Carousel</a>
-                                        </li>
-                                        <li>
-                                            <a href="list-group.html">List group</a>
-                                        </li>
-                                        <li>
-                                            <a href="modals.html">Modal</a>
-                                        </li>
-                                        <li>
-                                            <a href="paginations.html">Paginations</a>
-                                        </li>
-                                        <li>
-                                            <a href="popovers.html">Popovers</a>
-                                        </li>
-                                        <li>
-                                            <a href="progress.html">Progress</a>
-                                        </li>
-                                        <li>
-                                            <a href="spinners.html">Spinners</a>
-                                        </li>
-                                        <li>
-                                            <a href="tabs.html">Tabs</a>
-                                        </li>
-                                        <li>
-                                            <a href="toasts.html">Toasts</a>
-                                        </li>
-                                        <li>
-                                            <a href="tooltips.html">Tooltips</a>
-                                        </li>
-									</ul>
-								</div>
-							</div>
-							<!-- Sidebar menu ends -->
-
-                            <!-- Sidebar actions starts -->
-							<div class="sidebar-actions">
-								<div class="support-tile yellow">
-									<i class="icon-arrow-down-circle"></i><a href="#">Download Reports</a>						</div>
-							</div>
-							<!-- Sidebar actions ends -->
-
-						</div>
-
-						<!-- Graphs tab -->
-						<div class="tab-pane fade" id="tab-graphs" role="tabpanel" aria-labelledby="graphs-tab">
-							
-							<!-- Tab content header start -->
-							<div class="tab-pane-header">
-								Graphs &amp; Tables
-							</div>
-							<!-- Tab content header end -->
-							
-							<!-- Sidebar menu starts -->
-							<div class="sidebarMenuScroll">
-								<div class="sidebar-menu">
-                                    <ul>
-										<li class="list-heading">Graphs</li>
-                                        <li>
-                                            <a href="apex-graphs.html">Apex Graphs</a>
-                                        </li>
-                                        <li>
-                                            <a href="morris-graphs.html">Morris Graphs</a>
-                                        </li>
-                                        <li>
-                                            <a href="vector-maps.html">Vector Maps</a>
-                                        </li>
-                                    </ul>
-                                    
-                                    <ul>
-										<li class="list-heading">Tables</li>
-                                        <li>
-                                            <a href="bootstrap-tables.html">Bootstrap Tables</a>
-                                        </li>
-                                        <li>
-                                            <a href="custom-tables.html">Custom Tables</a>
-                                        </li>
-                                        <li>
-                                            <a href="data-tables.html">Data Tables</a>
-                                        </li>
-									</ul>
-								</div>
-							</div>
-							<!-- Sidebar menu ends -->
-
-							<!-- Sidebar actions starts -->
-							<div class="sidebar-actions">
-								<div class="support-tile pink">
-									<i class="icon-align-right1"></i> RTL Support
-								</div>
-							</div>
-							<!-- Sidebar actions ends -->
-
-						</div>
+					
 
 						<!-- Authentication tab -->
 						<div class="tab-pane fade" id="tab-authentication" role="tabpanel" aria-labelledby="authentication-tab">
@@ -506,31 +221,31 @@
 								<div class="sidebar-menu">
 									<ul>
 										<li>
-											<a href="login.html">Login</a>
+											<a href="#">Login</a>
 										</li>
 										<li>
-											<a href="signup.html">Signup</a>
+											<a href="#">Signup</a>
 										</li>
 										<li>
-											<a href="forgot-password.html">Forgot Password</a>
+											<a href="#">Forgot Password</a>
 										</li>
 										<li>
-											<a href="reset-password.html">Reset Password</a>
+											<a href="#">Reset Password</a>
 										</li>
 										<li>
-											<a href="lock-screen.html">Lock Screen</a>
+											<a href="#">Lock Screen</a>
 										</li>
 										<li>
-											<a href="subscribe.html">Subscribe</a>
+											<a href="#">Subscribe</a>
 										</li>										
 										<li>
-											<a href="maintenance.html">Maintenance</a>
+											<a href="#">Maintenance</a>
 										</li>
 										<li>
-											<a href="error.html">404</a>
+											<a href="#">404</a>
 										</li>
 										<li>
-											<a href="error-option2.html">Error</a>
+											<a href="#">Error</a>
 										</li>
 									</ul>
 								</div>
