--- a/BanHangOnline/BanHangOnline/Areas/Manager/Views/WebBannerGroup/Index.cshtml
+++ b/BanHangOnline/BanHangOnline/Areas/Manager/Views/WebBannerGroup/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IEnumerable<BanHangOnline.ViewModels.WebBannerGroupViewModel>
 
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Areas/Manager/Views/Shared/_Layout.cshtml";
+    //ViewData["Title"] = "Index";
+    //Layout = "~/Areas/Manager/Views/Shared/_Layout.cshtml";
 }
 
 <!-- Content wrapper scroll start -->
@@ -10,9 +10,9 @@
     <!-- Content wrapper start -->
     <div class="content-wrapper">
 
-        <div class="col-12 mb-2">
+      @*  <div class="col-12 mb-2">
             <a class="btn btn-primary" href="@Url.Action("Create")">Create New</a>
-        </div>
+        </div>*@
 
         <!-- Row start -->
         <div class="row gutters">
@@ -32,7 +32,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @foreach (var item in Model)
+                                   @* @foreach (var item in Model)
                                     {
                                         <tr>
                                             <td>@Html.DisplayFor(modelItem => item.BannerGroupID)</td>
@@ -52,7 +52,7 @@
                                                 </div>
                                             </td>
                                         </tr>
-                                    }
+                                    }*@
                                 </tbody>
                             </table>
                         </div>
