--- a/BanHangOnline/BanHangOnline/Views/Account/Login.cshtml
+++ b/BanHangOnline/BanHangOnline/Views/Account/Login.cshtml
@@ -4,28 +4,76 @@
     ViewData["Title"] = "Login";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h1>Login</h1>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Login" asp-controller="Account">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" placeholder="Email" required/>
-                <span asp-validation-for="Email" class="text-danger"></span>
+
+<!--breadcrumbs area start-->
+<div class="breadcrumbs_area breadcrumbs_bg">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="breadcrumb_content">
+                    <h3>Đăng Nhập</h3>
+                    <ul>
+                        <li><a href="/Home">Trang Chủ</a></li>
+                        <li>Đăng Nhập</li>
+                    </ul>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" placeholder="Password" required/>
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>    
-            <div class="form-group">
-                <input type="submit" value="Login" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
+<!--breadcrumbs area end-->
+<!-- customer login start -->
+<div class="customer_login">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-3">
+            </div>
+            <!--login area start-->
+            <div class="col-lg-6 col-md-6">
+                <div class="account_form">
+                    <div class="row">
+                        <div class="col-md-6">  <h2>Đăng nhập</h2></div>
+                        <div class="col-md-6">  <a asp-action="register" asp-controller="account" class="text-end"> <h2 >Đăng ký</h2></a>  </div>
+                    </div>
+
+
+                  
+                 
+                    <form asp-action="Login" asp-controller="Account">
+                        <p>
+                            <label>Nhập email <span>*</span></label>
+                            <input asp-for="Email" type="email" placeholder="Email" required />
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </p>
+                        <p>
+                            <label>Passwords <span>*</span></label>
+                            <input asp-for="Password" type="password" placeholder="Password" required />
+                            <span asp-validation-for="Password" class="text-danger"></span>
+                        </p>
+                        <div class="login_submit">
+                            <a href="#">Lost your password?</a>
+                            <label for="remember">
+                                <input id="remember" type="checkbox">
+                                Remember me
+                            </label>
+                            <button type="submit">login</button>
+
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+            <!--login area start-->
+
+            <div class="col-lg-3 col-md-3">
+            </div>
+
+        </div>
+    </div>
+</div>
+<!-- customer login end -->
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
