--- a/BanHangOnline/BanHangOnline/Views/Account/RegisterSuccess.cshtml
+++ b/BanHangOnline/BanHangOnline/Views/Account/RegisterSuccess.cshtml
@@ -1,8 +1,13 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "RegisterSuccess";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h1>RegisterSuccess</h1>
-
+<div class="row" style="margin:40px;">
+    <div class="col-md-3"></div>
+    <div class="col-md-6 text-center">
+        <h2 class="text-center">Bạn đã đăng ký thành công!</h2> <br />
+        <a asp-action="login" asp-controller="account" class="btn btn-success">Đăng nhập</a>
+        <a asp-action="Index" asp-controller="home" class="btn btn-info">Trang chủ</a>
+    </div>
+    <div class="col-md-3"></div>
+</div>
