--- a/BanHangOnline/BanHangOnline/Views/Product/ProductCategory.cshtml
+++ b/BanHangOnline/BanHangOnline/Views/Product/ProductCategory.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "danh mục sản phẩm";
+    var productCount = @Model.Products.Count;
 }
 
 <!--section bg area-->
@@ -15,7 +16,7 @@
                     <div class="breadcrumb_content">
                         <h3>Cửa hàng</h3>
                         <ul>
-                            <li><a href="index.html">Trang chủ</a></li>
+                            <li><a href="/Home">Trang chủ</a></li>
                             <li>Danh sách sản phẩm</li>
                         </ul>
                     </div>
@@ -26,135 +27,7 @@
         <!--shop  area start-->
         <div class="shop_area shop_reverse">
             <div class="row">
-                <div class="col-lg-3 col-md-12">
-                    <!--sidebar widget start-->
-                    <aside class="sidebar_widget">
-                        <div class="widget_inner">
-                            <div class="widget_list widget_categories">
-                                <h3>Women</h3>
-                                <ul>
-                                    <li class="widget_sub_categories sub_categories1">
-                                        <a href="javascript:void(0)">Shoes</a>
-                                        <ul class="widget_dropdown_categories dropdown_categories1">
-                                            <li><a href="#">Document</a></li>
-                                            <li><a href="#">Dropcap</a></li>
-                                            <li><a href="#">Dummy Image</a></li>
-                                            <li><a href="#">Dummy Text</a></li>
-                                            <li><a href="#">Fancy Text</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="widget_sub_categories sub_categories2">
-                                        <a href="javascript:void(0)">Bags</a>
-                                        <ul class="widget_dropdown_categories dropdown_categories2">
-                                            <li><a href="#">Flickr</a></li>
-                                            <li><a href="#">Flip Box</a></li>
-                                            <li><a href="#">Cocktail</a></li>
-                                            <li><a href="#">Frame</a></li>
-                                            <li><a href="#">Flickrq</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="widget_sub_categories sub_categories3">
-                                        <a href="javascript:void(0)">Clothing</a>
-                                        <ul class="widget_dropdown_categories dropdown_categories3">
-                                            <li><a href="#">Platform Beds</a></li>
-                                            <li><a href="#">Storage Beds</a></li>
-                                            <li><a href="#">Regular Beds</a></li>
-                                            <li><a href="#">Sleigh Beds</a></li>
-                                            <li><a href="#">Laundry</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="widget_list widget_filter">
-                                <h3>Filter by price</h3>
-                                <form action="#">
-                                    <div id="slider-range"></div>
-                                    <button type="submit">Filter</button>
-                                    <input type="text" name="text" id="amount" />
-                                </form>
-                            </div>
-                            <div class="widget_list widget_color">
-                                <h3>Select By Color</h3>
-                                <ul>
-                                    <li>
-                                        <a href="#">Black  <span>(6)</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="#">White  <span>(4)</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"> Blue <span>(8)</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"> Green <span>(6)</span></a>
-                                    </li>
-
-                                </ul>
-                            </div>
-                            <div class="widget_list widget_color">
-                                <h3>Select By SIze</h3>
-                                <ul>
-                                    <li>
-                                        <a href="#">S  <span>(6)</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"> M <span>(8)</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="#">L <span>(10)</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"> XL <span>(6)</span></a>
-                                    </li>
-
-                                </ul>
-                            </div>
-                            <div class="widget_list widget_brand">
-                                <h3>Brand</h3>
-                                <ul>
-                                    <li>
-                                        <a href="#">Studio Design <span>(8)</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"> Graphic Corner<span>(5)</span></a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="widget_list widget_manu">
-                                <h3>Manufacturer</h3>
-                                <ul>
-                                    <li>
-                                        <a href="#">Cotton <span>(6)</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Elastane <span>(10)</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Polyester <span>(4)</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Wool <span>(10)</span></a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Squarred <span>(3)</span></a>
-                                    </li>
-
-                                </ul>
-                            </div>
-                            <div class="widget_list tags_widget">
-                                <h3>Product tags</h3>
-                                <div class="tag_cloud">
-                                    <a href="#">Men</a>
-                                    <a href="#">Women</a>
-                                    <a href="#">Watches</a>
-                                    <a href="#">Bags</a>
-                                    <a href="#">Dress</a>
-                                </div>
-                            </div>
-                        </div>
-                    </aside>
-                    <!--sidebar widget end-->
-                </div>
+                @await Html.PartialAsync("_SearchProduct")
                 <div class="col-lg-9 col-md-12">
                     <!--shop wrapper start-->
                     <!--shop toolbar start-->
@@ -164,25 +37,11 @@
                             <button data-role="grid_3" type="button" class=" btn-grid-3" data-bs-toggle="tooltip" title="3"></button>
                             <button data-role="grid_list" type="button" class="active btn-list" data-bs-toggle="tooltip" title="List"></button>
                         </div>
-                        <div class=" niceselect_option">
-                            <form class="select_option" action="#">
-                                <select name="orderby" id="short">
-
-                                    <option selected value="1">Sort by average rating</option>
-                                    <option value="2">Sort by popularity</option>
-                                    <option value="3">Sort by newness</option>
-                                    <option value="4">Sort by price: low to high</option>
-                                    <option value="5">Sort by price: high to low</option>
-                                    <option value="6">Product Name: Z</option>
-                                </select>
-                            </form>
-                        </div>
                         <div class="page_amount">
-                            <p>Showing 1–12 of 21 results</p>
+                            <p>Có @productCount sản phẩm</p>
                         </div>
                     </div>
                     <!--shop toolbar end-->
-
                     <div class="row shop_wrapper grid_list">
 
                         @foreach (ProductViewModel item in Model.ListPagination.Products)
@@ -203,8 +62,7 @@
                                                 }
                                                 <div class="action_links">
                                                     <ul>
-                                                        <li class="quick_button"><a href="#" data-bs-toggle="modal" data-bs-target="#modal_box" title="quick view"> <i class="fa fa-eye" aria-hidden="true"></i></a></li>
-                                                        <li class="wishlist"><a class="WishProduct" title="Yêu thích" onclick="wishProduct(@item.Id)"><i class="fa fa-heart-o" aria-hidden="true"></i></a></li>
+                                                        <li class="wishlist"><a class="WishProduct" title="sản phẩm yêu thích" onclick="wishProduct(@item.Id)"><i class="fa fa-heart-o" aria-hidden="true"></i></a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -220,8 +78,8 @@
                                                     </ul>
                                                 </div>
                                                 <div class="price_box">
-                                                    <span class="old_price">@item.RetailPrice</span>
-                                                    <span class="current_price">@item.SalePrice</span>
+                                                    <span class="old_price">@item.RetailPrice.ToString("n0") đ</span>
+                                                    <span class="current_price">@item.SalePrice.ToString("n0") đ</span>
                                                 </div>
                                                 <div class="add_to_cart">
                                                     <a asp-route="addcart" asp-route-id="@item.Id" title="Đặt Hàng"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Đặt Hàng</a>
@@ -230,8 +88,8 @@
                                             <div class="product_content list_content">
                                                 <h4 class="product_name"><a title="@item.ProductTitleURL" asp-action="ProductDetail" asp-controller="Product" asp-route-ProductDetailUrl="@item.ProductTitleURL">@item.ProductName</a></h4>
                                                 <div class="price_box">
-                                                    <span class="old_price">@item.RetailPrice</span>
-                                                    <span class="current_price">@item.SalePrice</span>
+                                                    <span class="old_price">@item.RetailPrice.ToString("n0") đ</span>
+                                                    <span class="current_price">@item.SalePrice.ToString("n0") đ</span>
                                                 </div>
                                                 <div class="product_rating">
                                                     <ul>
