--- a/BanHangOnline/BanHangOnline/Views/Shared/_CartPartial.cshtml
+++ b/BanHangOnline/BanHangOnline/Views/Shared/_CartPartial.cshtml
@@ -3,13 +3,88 @@
 @using Newtonsoft.Json
 @inject IHttpContextAccessor HttpContextAccessor
 
-
 @{
     var session = HttpContextAccessor.HttpContext.Session;
-    string jsoncart = session.GetString (BanHangOnline.Controllers.ProductController.CARTKEY);
-    if (jsoncart != null) {
-        var cart = JsonConvert.DeserializeObject<List<CartViewModel>> (jsoncart);
-        <div class="nav-item"><a asp-route="cart">Giỏ hàng(@cart.Count)</a></div>
-         
+    string jsoncart = session.GetString(BanHangOnline.Controllers.ProductController.CARTKEY);
+    decimal total = 0;
+
+    if (jsoncart != null)
+    {
+        var cart = JsonConvert.DeserializeObject<List<CartViewModel>>(jsoncart);
+        //<div class="nav-item"><a asp-route="cart">Giỏ hàng(@cart.Count)</a></div>
+        <div class="mini_cart_wrapper">
+            <a href="javascript:void(0)">
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                <span class="cartitems"> Giỏ Hàng</span>
+                <span class="item_count">@cart.Count</span>
+            </a>
+        </div>
+
+
+        <!--mini cart-->
+        <div class="mini_cart">
+            <div class="cart_gallery">
+                <div class="cart_close">
+                    <div class="cart_text">
+                        <h3>Giỏ hàng</h3>
+                    </div>
+                    <div class="mini_cart_close">
+                        <a href="javascript:void(0)"><i class="ion-android-close"></i></a>
+                    </div>
+                </div>
+                @foreach (var item in cart)
+                {
+                    var thanhtien = item.Quantity * item.product.SalePrice;
+                    total += thanhtien;
+                    <div class="cart_item">
+                        <div class="cart_info">
+                            <a href="#">@item.product.ProductName</a>
+                            <p>@item.Quantity x <span>@(thanhtien.ToString("n0")) đ</span></p>
+                        </div>
+                        <div class="cart_remove">
+                            <a asp-route="removecart" asp-route-id="@item.product.Id"><i class="ion-ios-close-outline"></i></a>
+                        </div>
+                    </div>
+                }
+
+                @*  <div class="cart_item">
+        <div class="cart_img">
+        <a href="#"><img src="~/Content/Shop/assets/img/s-product/product2.png" alt=""></a>
+        </div>
+        <div class="cart_info">
+        <a href="#">Juicy Couture Juicy</a>
+        <p>1 x <span> $29.00 </span></p>
+        </div>
+        <div class="cart_remove">
+        <a href="#"><i class="ion-ios-close-outline"></i></a>
+        </div>
+        </div>*@
+            </div>
+            <div class="mini_cart_table">
+                <div class="cart_table_border">
+                    <div class="cart_total mt-10">
+                        <span>Thành tiền:</span>
+                        <span class="price">@(total.ToString("n0")) đ</span>
+                    </div>
+                </div>
+            </div>
+            <div class="mini_cart_footer">
+                <div class="cart_button">
+                    <a asp-action="cart" asp-controller="Product"><i class="fa fa-shopping-cart"></i>Xem giỏ hàng</a>
+                </div>
+                <div class="cart_button">
+                    <a class="active" asp-controller="Product" asp-action="CheckOut"><i class="fa fa-sign-in"></i>Thanh Toán</a>
+                </div>
+
+            </div>
+        </div>
+        <!--mini cart end-->
+    }
+    else
+    {
+        <div class="mini_cart_wrapper">
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                <span class="cartitems"> Giỏ Hàng</span>
+        </div>
     }
 }
