--- a/BanHangOnline/BanHangOnline/wwwroot/Content/Shop/assets/css/style.css
+++ b/BanHangOnline/BanHangOnline/wwwroot/Content/Shop/assets/css/style.css
@@ -4502,11 +4502,11 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   float: right;
   text-align: right;
   line-height: 31px;
-  width: 60px;
+  /*width: 60px;*/
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .widget_list.widget_filter form input {
-    width: 65px;
+   /* width: 65px;*/
   }
 }
 .widget_list.widget_filter form button {
